# torcs-racing-robot

./: .gitattributes  .gitignore  README.md  install-user-sh  src
python-base-clients/SimplePythonClient/: BaseDriver.py  CarControl.py  CarState.py  PidDriver.py  SimpleParser.py  client.py
scr-client-cpp/: client
skylake-cpp-client/: BaseDriver.h  CMakeLists.txt  CarState.cpp  CarState.h  Kinematics.cpp  Kinematics.h  Map.cpp  Map.h  MapSDL2.cpp  MapSDL2.h  SimpleDriver.cpp  SimpleDriver.h  SimpleParser.cpp  SimpleParser.h  SkylakeConsts.h  SkylakeDriver.cpp  SkylakeDriver.h  WrapperBaseDriver.h  car_description.xml  client  client.cpp  curves_algorithm.py  rpm.ods  sensors_description.md
skylake-cpp-client/Base/: CarControl.cpp  CarState.h  WrapperBaseDriver.h
skylake-cpp-client/Driver/: Kinematics.h  Map.h  MapSDL2.h  SkylakeDriver.cpp  SkylakeDriver.h
skylake-cpp-client/libs/fl/: fuzzylite.h
skylake-cpp-client/libs/fl/rule/: Antecedent.h
skylake-cpp-client/libs/fl/term/: Accumulated.h
skylake-cpp-client/libs/fl/variable/: Variable.h
skylake-cpp-client/src/: CMakeLists.txt
skylake-cpp-client/src/core/: BaseDriver.h  CarControl.h  SkylakeBaseDriver.cpp  SkylakeBaseDriver.h  SkylakeConsts.cpp  SkylakeConsts.h  WrapperBaseDriver.cpp  WrapperBaseDriver.h
skylake-cpp-client/src/core-common/: WrapperBaseDriver.h
skylake-cpp-client/src/driver/: Kinematics.h  Map.cpp  MapSDL2.cpp  SkylakeConsts.h  SkylakeDriver.cpp  SkylakeDriver.h
skylake-cpp-client/src/fuzzy-driver/: FuzzyDriver.cpp  FuzzyDriver.h  client.cpp
skylake-cpp-client/src/mapping-driver/: Kinematics.cpp  Kinematics.h  Map.cpp  MapSDL2.cpp  SkylakeDriver.cpp  client.cpp
skylake-cpp-client/src/vfh-fuzzy-driver/: VFHFuzzyDriver.cpp  VFHFuzzyDriver.h  client.cpp  driver.fcl  driver_modified.fcl
skylake-python-client/: __init__.py  carControl.py  carState.py  control_gear.py  control_steering.py  driver.py  skylake_car.py  skylake_consts.py  snakeoil.py  torcs_launcher.py
torcs-1.3.4/: Make-config
torcs-1.3.4-server/: Make-config  install_here.sh
torcs-1.3.4-server/src/doc/: torcsdoc.conf
torcs-1.3.4-server/src/drivers/scr_server/: scr_server.cpp
torcs-1.3.4-server/src/interfaces/: car.h
torcs-1.3.4-server/src/libs/raceengineclient/: raceengine.cpp  raceinit.cpp
torcs-1.3.4/src/modules/simu/simuv2/: simu.cpp
torcs-1.3.7/: Make-config
torcs-1.3.7/src/doc/: torcsdoc.conf  torcsdoc.conf.orig
torcs-1.3.7/src/drivers/skylake/: Makefile  skylake.cpp  skylake.def  skylake.dsp  skylake.xml
torcs-1.3.7/src/libs/raceengineclient/: raceengine.cpp
torcs-1.3.7/src/libs/tgf/: tgf.cpp  tgf.cpp.rej  tgf.def.rej
torcs-1.3.7/src/windows/: main.cpp.rej
