CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)

PROJECT(razernaga)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/build")
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(CMAKE_AUTOMOC ON)
SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

SET(CMAKE_C_COMPILER "gcc-5")
SET(CMAKE_CXX_COMPILER "g++-5")

#FIND_PACKAGE(Qt4 REQUIRED)
FIND_PACKAGE(SDL2 REQUIRED)
#INCLUDE(${QT_USE_FILE})
INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS})

ADD_EXECUTABLE(skylake 
		client.cpp
		BaseDriver.h
		CarControl.cpp CarControl.h
		CarState.cpp CarState.h
		SkylakeDriver.cpp SkylakeDriver.h
		SimpleParser.cpp SimpleParser.h
		SkylakeConsts.h
		Kinematics.cpp Kinematics.h
		Map.cpp Map.h
		MapSDL2.cpp MapSDL2.h
		WrapperBaseDriver.cpp WrapperBaseDriver.h)
TARGET_LINK_LIBRARIES(skylake ${SDL2_LIBRARIES}) #${QT_LIBRARIES}
SET_TARGET_PROPERTIES(skylake PROPERTIES COMPILE_FLAGS "-std=c++14 -O3")

ADD_DEFINITIONS(-DDEBUG)