CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)

PROJECT(razernaga)
FIND_PACKAGE(OpenCV REQUIRED)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/build")
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(CMAKE_AUTOMOC ON)
SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

SET(CMAKE_C_COMPILER "gcc-5")
SET(CMAKE_CXX_COMPILER "g++-5")

FIND_PACKAGE(SDL2 REQUIRED)
INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS})

INCLUDE_DIRECTORIES(libs)
SET(FUZZY_LIBRARIES ${CMAKE_CURRENT_SOURCE_DIR}/libs/libfuzzylite-staticd.a)

ADD_DEFINITIONS(-DDEBUG)
ADD_SUBDIRECTORY(src)